cinema/src/main/resources/static/css/popup.css
.loginPopup{
    background-color: #fff;
    padding: 30px 40px;
    position: fixed;
    width: 400px;
    height: 300px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 22px;
    text-align: center;
    display: none;
}

.regPopup{
    background-color: #fff;
    padding: 42px 20px 0 20px;
    position: fixed;
    width: 515px;
    height: 542px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 22px;
    text-align: center;
    display: none;
}

#formPopup{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#formPopup input{
    width: 350px;
    margin: 12px auto;
    border: 2px solid black;
    border-radius: 50px;
    padding: 12px;
    font-size: larger;
}

#loginPopupBtn{
    background-color: #0A063F;
    border-radius: 22px;
    color: #fff;
    padding: 12px 25px;
    width: 220px;
    height: 60px;
    margin: 12px auto;
}

#regPopupBtn{
    background: 0;
    border: 0;
    color: #000;
    font-weight: bold;
}

#backgroundPopup{
    position: fixed;
    top: 0;
    width: 100vw;
    height: 120vh;
    background-color: rgba(0, 0, 0, 0.6);
    display: none;
}

#createAccBtn{
    width: 260px;
    height: 60px;
    background: #0A063F;
    border-radius: 21px;
    color: #fff;
    font-weight: 700;
    font-size: 22px;
    line-height: 18px;
    margin: 22px auto;
}

.regPopup h2{
    margin-bottom: 16px;
}

